--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                             <span class="title__effect">Developer</span>
                                             <span class="title__effect">Pakistan</span>
                                         </strong><br>
-										<img src="abc2.jpeg" class="abc2" >
+										<img src="img/abc2.jpeg" class="abc2" >
                                     </h2>
                                     <div class="title__description">My Name Anham Virk My job is to work on the website!</div>
 
