--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                         <a href="#section2" class="nav-item nav-link">MY Skill</a>
                         <a href="#section3" class="nav-item nav-link">MY TEAM</a>
                         <a href="price.html" class="nav-item nav-link">Pricing</a>
-                        
-                        </div>
+                       
                         <a href="#contact" class="nav-item nav-link">Contact</a>
+						<a href="#footer" class="nav-item nav-link">Link/details</a>
                     </div>
                 </div>
             </nav>
@@ -333,7 +333,7 @@
             <div class="container">
                <div class="row border-top">
                   <div class="col-md-6 padding_bottom1   ">
-                     <h3 style="color:black;">Subscribe Now</h3>
+                     <h3 style="color:black;" id="footer">Subscribe Now</h3>
                      <form class="footer_form">
                         <input class="enter" placeholder="Enter your email" type="type" name="Enter your email">
                         <button class="submit">submit</button>
@@ -343,7 +343,7 @@
                      <div class="row">
                         <div class="col-md-5 offset-md-1 padding_bottom1">
                            <h3 style="color:black;">Links</h3>
-                           <ul class="cont">
+                           <ul class="conts">
                               <li><a href="">Web Developer</a><br> <a href="">softwear Developer</a><br><a href="">Back anhd Developer</a><br> </li>
                            </ul>
                         </div>
@@ -362,7 +362,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2022 COPY All Rights Github. <a href="https://www.facebook.com/anham.jutt.5">Designer By Anham(virl)</a></p>
+                        <p>© 2022 COPY All Rights Github. <a href="https://www.facebook.com/anham.jutt.5">Designer By Anham(virk)</a></p>
                      </div>
                   </div>
                </div>
